--- a/package.json
+++ b/package.json
@@ -1,16 +1,5 @@
 {
-  "name": "WebApp-WiHK-TourInfoScraper",
-  "productName": "WebApp-WiHK-TourInfoScraper",
-  "description": "My Electron application description",
-  "keywords": [],
-  "main": "./main.js",
-  "version": "1.0.0",
-  "author": "VKCat",
-  "scripts": {
-    "start": "electron ."
-  },
-  "dependencies": {},
-  "devDependencies": {
-    "electron": "39.0.0"
+  "dependencies": {
+    "googleapis": "^170.1.0"
   }
 }
