--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ backend/Data/*.csv
 backend/*.env
 
 #Credentials
-backend\Data\wihk-wpi-iqp-pabc-239700f57bc2.json
+backend/**/*.json
 
 # Python
 __pycache__/
